// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs


Table users {
  id integer [primary key]
  username varchar(100) [not null, unique]
  
  first_name varchar(100) [not null]
  last_name varchar(100) [not null]

  email varchar(255) [unique]
  phone varchar(30) [unique]

  password_hash varchar(255)

  created_at timestamp [not null, default: `now()`]
}


Table roles {
  id integer [primary key]
  name varchar(100) [not null, unique]
}

Table users_roles {
  user_id integer [primary key, ref: > users.id]
  role_id integer [primary key, ref: > roles.id]
}

Table check_in_history {
  id integer [primary key]
  user_id integer [not null, ref: > users.id]
  check_in_datetime datetime [not null, default: `now()`]
}

Table genres {
  id integer [primary key]
  name varchar(100) [not null]
}

Table books {
  id integer [primary key]
  title varchar(100) [not null]
  author_id integer [not null, ref: > authors.id]
  publish_year integer
  genre_id integer [not null, ref: > genres.id]
  isbn varchar(20) [unique]
  created_at timestamp [not null, default: `now()`]
}

Table book_copies {
  id integer [primary key]
  book_id integer [not null, ref: > books.id]
  inventory_number varchar(50) [not null, unique]
  // See docs/libful-api/books/BookCopyStatuses.md
  status varchar(30) [not null]
  created_at timestamp [not null, default: `now()`]
}

Table authors {
  id integer [primary key]
  full_name varchar(100) [not null]
}

Table book_rents {
  id integer [primary key]

  book_copy_id integer [not null, ref: > book_copies.id]
  user_id integer [not null, ref: > users.id]

  rented_at timestamp [not null, default: `now()`]
  due_at timestamp

  returned_at timestamp

  return_status varchar(30) // available, damaged, lost

  notes text
}

Table book_rent_fines {
  id integer [primary key]
  book_rent_id integer [not null, ref: > book_rents.id]
  user_id integer [not null, ref: > users.id]

  // See docs/libful-api/books/BookRentFines.md
  fine_type varchar(30) [not null]
  amount_uah integer [not null]
  days_overdue integer

  notes text
  created_at timestamp [not null, default: `now()`]
  paid_at timestamp

  indexes {
    (book_rent_id, fine_type) [unique]
  }
}
